--- a/package.json
+++ b/package.json
@@ -5,7 +5,16 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "babel-polyfill": "^6.26.0",
+    "bootstrap": "^4.0.0",
+    "lodash": "^4.17.4",
+    "react-codepen": "^0.1.0",
+    "react-icons": "^2.2.7",
+    "react-router-dom": "^4.2.2",
+    "react-spinners": "^0.2.5",
+    "reactstrap": "^5.0.0-alpha.4",
+    "youtube-api-search": "0.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
