--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-scripts": "2.1.1",
     "react-spinners": "^0.2.5",
     "reactstrap": "^5.0.0-alpha.4",
+    "styled-components": "^4.1.3",
     "youtube-api-search": "0.0.5"
   },
   "scripts": {
