--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "react-dom": "^16.7.0",
     "react-icons": "^2.2.7",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.2",
     "react-spinners": "^0.2.5",
     "reactstrap": "^5.0.0-alpha.4",
     "styled-components": "^4.1.3",
-    "youtube-api-search": "0.0.5"
+    "youtube-api-search": "0.0.5",
+    "youtube-api-v3-search": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
