--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.2.1",
+    "chart.js": "^2.7.3",
     "lodash": "^4.17.4",
+    "moment": "^2.23.0",
     "react": "^16.7.0",
     "react-codepen": "^0.1.0",
     "react-dom": "^16.7.0",
